se ajusta servicio